--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,105 +8,188 @@ body{
     padding: 0;
 }
 
+header{
+    display: flex;
+    flex-direction: column;
+}
+
 .bienvenido{
+    letter-spacing: 3px;
+    display: flex;
+    justify-content: center;
     background-color: rgba(255, 238, 0, 0.2);
     width: auto;
     padding: 1%;
-    border: 4PX solid ;
+    border: 4px solid ;
 }
 
 .titulo{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
-    font-size:30px ;
+    font-size:35px ;
 }
 
-h3{
-    letter-spacing: 7PX;
-    font-size: 20px;
-    color: white;
-    background-color: rgba(8, 8, 8, 0.7);
-}
 
 nav{
-    margin-top: 0px;
     display: flex;
-    border: 3px solid black;
+    border: 4px solid black;
     border-top: 0;
+    text-shadow: 0px 0px 7px rgb(255, 255, 255) ;
     background-color: rgba(8, 8, 8, 0.7);
-    justify-content: space-between;
+    justify-content: space-around  ;
     align-items: center;
-    padding: 0 90px;
 } 
 
 nav ol{
+    
     display: flex;
     list-style: none;
     padding: 0;
     margin: 0;
     flex-grow: 1;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 ol a{
+    border-right: 5px solid black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    letter-spacing: 5PX;
     color: white;
     text-decoration: none;
     width: 100%;
 }
 
+
 ol a:hover{
     color: yellow;
     background-color: rgb(39, 38, 38);
+    text-shadow: 0px 0px 7px rgb(246, 255, 0);
 }
 
+a li:hover{
+    transition: transform 0.2s;
+    transform: scale(1.2);
+}
 
 li{
+    letter-spacing: 5PX;
     font-size: 20px;
     margin: 2%;
+}
+
+.cont1 {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    border: 4px solid black;
+    border-top: none;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgba(8, 8, 8, 0.7);
+}
+
+.p1, .p2 {
+    height: 100%;
+    width: 100%;
+    color: white;
+    padding: 0px;
+    font-size: 15px;
+    margin: 10px;
+}
+
+
+.yo {
+    background: rgba(0, 0, 0, 0.5);
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    border: 0px solid black;
+    margin-bottom: 0px;
+    flex-direction: column; 
+    text-align: center;
 
 }
 
-.nombre{
-    border-radius: 20px;
-    display: inline-block;
-    padding: 15px;
-    border: 7px double white;
+.yo2{
+    margin-top: 20px;
+    border: 9px double white;
+    background: rgba(0, 0, 0, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; 
+    width: 60%;
+    height: 70%;
+}
+
+.nombre {
+    letter-spacing: 2px;
+    width: 96.5%;
+    margin-top: 0px;
+    padding: 20px;
+    border: 9px double white;
+    border-top: none;
+    border-left: none;
+    border-right: none;
     color: white;
     font-size: 24px;
     background: rgba(8, 8, 8, 0.7);
+    margin-bottom: 10px; /* Ajusta el espacio entre .nombre y .fachero */
 }
 
-.cont{
+.fachero {
+    width: 250px;
+    box-shadow: 0px 0px 30px white;
+    padding: 3px;
+    border-radius: 30% 0%;
+    border: 8px double white;
+    margin-top: 15px; /* Ajusta el espacio entre .fachero y h4 */
+}
+
+h4 {
+    font-size: 20px;
+    color: white;
+    text-shadow: 0px 0px 7px rgb(255, 255, 255) ;
+}
+
+.cont2{
+    border: 4px solid black;
+    margin-top: 4%;
     display: flex;
-    justify-content: center;
-    letter-spacing: 1px;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+
 }
 
-.p1, .p2{
-    border: 8px double black;
-    margin: 10px 40px;
-    background-color: rgba(255, 0, 0, 0.1);
-    padding: 10px;
-    font-size: 15px;
+.perfil{
+    font-size: 25px;
+    color: yellow;
+    text-shadow: 0px 0px 10px rgb(246, 255, 0) ;
 }
-
-
 
 .p3{
-    border: 3px solid black;
     color: white;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 10px;
     font-size: 20px;
 }
 
-.fachero{
-    border-radius: 12%;
-    border: 5px solid black;
-    align-items: center;
+.cont2 a{
+    
 }
 
-.contac{
 
+.contac{
+    font-size: 18px;
+    color: aqua;
+    list-style: none;
+    text-decoration: none;
+    text-shadow: 0px 0px 10px rgb(0, 238, 255) ;
+}
+
+footer{
+    margin: 10px;
+    font-size: 14px;
+    color: white;
 }
