--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 body{
     background-image: url(../IMAGENES/paisajito.jpg);
     background-size: 100% 118%;
-    text-align: center;
+    text-align: center; 
     font-family:monospace;
     margin: 0;
     margin-top: 0;
@@ -46,11 +46,11 @@ nav ol{
     list-style: none;
     padding: 0;
     margin: 0;
-    flex-grow: 1;
     justify-content: center;
 }
 
 ol a{
+    padding: 5px;
     border-right: 5px solid black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
@@ -61,14 +61,15 @@ ol a{
 
 ol a:hover{
     color: yellow;
-    background-color: rgb(39, 38, 38);
+    background-color: black;
     text-shadow: 0px 0px 7px rgb(246, 255, 0);
+    transition: transform 0.2s;
+    transform: scale(1.1);
+    border: 2px solid yellow;
+    box-shadow: 0 0 20px yellow;
 }
 
-a li:hover{
-    transition: transform 0.2s;
-    transform: scale(1.2);
-}
+
 
 li{
     letter-spacing: 5PX;
@@ -159,12 +160,11 @@ h4 {
     justify-items: center;
     align-items: center;
     background: rgba(0, 0, 0, 0.3);
-    width: 100%;
-    height: 100%;
-
+    width: 99.5%;
 }
 
 .perfil{
+    letter-spacing: 3px;
     font-size: 25px;
     color: yellow;
     text-shadow: 0px 0px 10px rgb(246, 255, 0) ;
