--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,8 @@
 body{
     background-image: url(../IMAGENES/paisajito.jpg);
-    background-size: 100% 118%;
-    text-align: center; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; 
     font-family:monospace;
     margin: 0;
     margin-top: 0;
