--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,6 @@ body{
     background-position: center; 
     font-family:monospace;
     margin: 0;
-    margin-top: 0;
     padding: 0; 
 }
 
@@ -55,6 +54,9 @@ ol a{
     color: white;
     text-decoration: none;
     width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 
