--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,10 @@
 body{
     background-image: url(../IMAGENES/paisajito.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center; 
+    background-size: 100% 118%;
+    text-align: center; 
     font-family:monospace;
     margin: 0;
+    margin-top: 0;
     padding: 0; 
 }
 
@@ -54,9 +54,6 @@ ol a{
     color: white;
     text-decoration: none;
     width: 100%;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
 }
 
 
