--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -55,66 +55,12 @@ nav ol{
     align-items: center;
 }
 
-
-ol a{
-    padding: 0.6%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: white;
-    text-decoration: none;
-    width: 20%;
-}
-
-
-li{
-    letter-spacing: 5PX;
-    font-size: 20px;
-    margin: 2%;
-}
-
-
-ol a:hover{
-    background: rgb(27, 27, 27);
-    color: rgb(0, 225, 255);
-    text-shadow: 0px 0px 22px rgb(0, 225, 255);
-    border: px solid cyan;
-    box-shadow: 0 0 20px cyan;
-    transition: transform 0.3s;
-    transform: scale(1.1);
-    letter-spacing: 7px;
-}
-
-a li:hover{
-    letter-spacing: 6px;
-    transition: transform 0.2s;
-    transform: scale(1.05);
-}
-
-.inicio:hover{
-    color: yellow;
-    text-shadow: 0px 0px 22px yellow;
-    border: px solid yellow;
-    box-shadow: 0 0 20px yellow ;
-    transition: transform 0.3s;
-    transform: scale(1.2);
-    letter-spacing: 8px;
-    border-radius: 15px;
-}
-
 section{
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     width: 100%;
-}
-
-ul{
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 0;
-    margin: 0;
 }
 
 .tittle{
@@ -128,6 +74,61 @@ ul{
     font-size: 40px;
     border-radius: 50px;
     box-shadow: 0 0 40px white
+}
+
+ol a{
+    padding: 0.6%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    text-decoration: none;
+    width: 20%;
+    transition: 0.6s;
+}
+
+li{
+    letter-spacing: 5PX;
+    font-size: 20px;
+    margin: 2%;
+    transition: 0.6s;
+}
+
+ol a:hover{
+    background: cyan;
+    color: black;
+    text-shadow: 0px 0px 22px rgb(0, 225, 255);
+    border: px solid cyan;
+    box-shadow: 0 0 20px cyan;
+    transition: 0.6s;
+    transform: scale(1.1);
+    letter-spacing: 7px;
+
+}
+
+a li:hover{
+    letter-spacing: 6px;
+    transition: transform 0.6s;
+    transform: scale(1.05);
+}
+
+.inicio:hover{
+    color: yellow;
+    text-shadow: 0px 0px 22px yellow;
+    border: px solid yellow;
+    box-shadow: 0 0 20px yellow ;
+    transition: 0.6s;
+    transform: scale(1.2);
+    letter-spacing: 8px;
+    border-radius: 15px;
+    background: black;
+}
+
+ul{
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
 }
 
 .descrip{
@@ -324,4 +325,5 @@ footer{
     margin: 10px;
     font-size: 15px;
     color: white;
+    transition: 0.5s;
 }
